# DART

./: .gitignore  LICENSE  README.md  app.py  council.py  openenv.yaml  pyproject.toml  requirements.txt  requirements_hackathon.txt  self_improvement.py
.streamlit/: config.toml
agents/: __init__.py  base_agent.py  diagnostic_agent.py  risk_agent.py  treatment_agent.py
dtm_openenv/: __init__.py  client.py  models.py
env/: __init__.py  action_parser.py  digital_twin_env.py  fall_detection.py  openenv_adapter.py  patient_twin.py
evaluation/: baseline_random_agent.py  baseline_rule_agent.py  eval_metrics.py  pipeline.py
logs/: baseline_returns.json  colab_experiment.json  council_training_last.json  evaluation_baseline.json  training_last.json
reward/: __init__.py  rubric.py
schemas/: patient_observation.schema.json  treatment_action.schema.json
scripts/: evaluate_agents.py  generate_readme_demo_figures.py  plot_colab_judge_insights.py  plot_colab_publication.py  plot_compare_training_runs.py  plot_judge_two_bar_charts.py  plot_rewards.py  plot_training_validation.py  push_to_hf_space.ps1  run_env_demo.py  run_evaluation.py  run_sanity.py  run_ui.py  train_reinforce_twin.py  upload_figures_to_hf_space.py  upload_hf_space_artifacts.py
tools/: __init__.py  biomarker_tracker.py  disease_progression_model.py  drug_interaction_checker.py  ehr_analyzer.py  genomic_profiler.py  resistance_detector.py  risk_predictor.py  trial_simulator.py
training/: DART_Colab_submission.ipynb  __init__.py  colab_episode_rl.py  colab_http_clinical_pipeline.ipynb  llm_reinforce.py  (+5 more)
(+9 files in other folders)
