[project]
name = "digital-twin-medicine"
version = "0.1.0"
description = "Digital Twin Medicine — RL Agent for Personalized Treatment (OpenEnv-style)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
